--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -20,22 +20,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WJb-vP-NtG" userLabel="Game Info Stack View">
-                                <rect key="frame" x="16" y="60.000000000000007" width="343" height="20.333333333333336"/>
+                                <rect key="frame" x="16" y="60" width="343" height="32"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 00  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rQi-yF-XNt">
-                                        <rect key="frame" x="0.0" y="0.0" width="112.66666666666667" height="20.333333333333332"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="112.66666666666667" height="32"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" red="0.25882352939999997" green="0.52156862749999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Found Sets: 00  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQc-tt-wvh">
-                                        <rect key="frame" x="120.66666666666667" y="0.0" width="169.66666666666663" height="20.333333333333332"/>
+                                        <rect key="frame" x="120.66666666666667" y="0.0" width="169.66666666666663" height="32"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" red="0.25882352939999997" green="0.52156862749999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:0  " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mOA-KL-aBe">
-                                        <rect key="frame" x="298.33333333333331" y="0.0" width="44.666666666666686" height="20.333333333333332"/>
+                                        <rect key="frame" x="298.33333333333331" y="0.0" width="44.666666666666686" height="32"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" red="0.25882352939999997" green="0.52156862749999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcS-Ud-vGf">
-                                <rect key="frame" x="16" y="96.333333333333329" width="343" height="25"/>
+                                <rect key="frame" x="16" y="108" width="343" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" constant="25" id="GrU-0y-M0h"/>
                                 </constraints>
@@ -92,18 +92,28 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Arc-dW-sfI">
+                                <rect key="frame" x="16" y="108" width="343" height="606"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.94115844286243655" green="0.94115844286243655" blue="0.94115844286243655" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="WJb-vP-NtG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="4YF-ND-9uD"/>
                             <constraint firstItem="IcS-Ud-vGf" firstAttribute="top" secondItem="WJb-vP-NtG" secondAttribute="bottom" constant="16" id="4bn-02-J4y"/>
+                            <constraint firstItem="Arc-dW-sfI" firstAttribute="top" secondItem="WJb-vP-NtG" secondAttribute="bottom" constant="16" id="55W-nG-zwi"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WJb-vP-NtG" secondAttribute="trailing" constant="16" id="6Io-Se-nd6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xza-86-snG" secondAttribute="trailing" constant="16" id="6rv-eM-dso"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Arc-dW-sfI" secondAttribute="trailing" constant="16" id="IEo-Qz-40V"/>
                             <constraint firstItem="IcS-Ud-vGf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="KHO-aj-mEn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xza-86-snG" secondAttribute="bottom" constant="16" id="O9f-nk-gSu"/>
+                            <constraint firstItem="xza-86-snG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Arc-dW-sfI" secondAttribute="bottom" constant="16" id="RKl-1i-cLL"/>
                             <constraint firstItem="WJb-vP-NtG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="eL3-bc-3Ni"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IcS-Ud-vGf" secondAttribute="trailing" constant="16" id="iYD-sK-Riw"/>
                             <constraint firstItem="xza-86-snG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="m3H-pf-Yno"/>
+                            <constraint firstItem="Arc-dW-sfI" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ocB-Qf-Skt"/>
+                            <constraint firstItem="Arc-dW-sfI" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="vXV-mk-6p1"/>
+                            <constraint firstItem="Arc-dW-sfI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="vry-QD-JlC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -111,6 +121,7 @@
                         <outlet property="deal3CardsButton" destination="WR4-xD-UHt" id="fgz-93-ke6"/>
                         <outlet property="foundSetsLabel" destination="QQc-tt-wvh" id="HYA-xs-h4C"/>
                         <outlet property="messageLabel" destination="IcS-Ud-vGf" id="oPL-CU-HiZ"/>
+                        <outlet property="playgroundView" destination="Arc-dW-sfI" id="PLA-WG-n4e"/>
                         <outlet property="scoreLabel" destination="rQi-yF-XNt" id="WQ3-YG-4Rm"/>
                         <outlet property="timeLabel" destination="mOA-KL-aBe" id="l2M-mC-5T1"/>
                     </connections>
